<resources>
    <string name="app_name">AstroWeather</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Day Fragment -->
    <string name="sunriseLabel">Sunrise:</string>
    <string name="sunsetLabel">Sunset:</string>
    <string name="dawnLabel">Civil Dawn:</string>
    <string name="duskLabel">Civil Dusk:</string>
    <string name="time">Time:</string>
    <string name="azimuth">Azimuth:</string>

    <!-- Night Fragment -->
    <string name="moonriseLabel">Moonrise:</string>
    <string name="moonsetLabel">Moonset:</string>
    <string name="newMoon">New Moon:</string>
    <string name="fullmoon">Full Moon:</string>
    <string name="moonPhase">Moon phase:</string>
    <string name="dayOfLunarMonth">Day of lunar month:</string>

    <!-- Settings Fragment -->

    <string name="saveChanges">Save</string>
    <string name="refresh">Refresh:</string>
    <string name="cities">Cities</string>
    <string name="citiesInput">Enter city:</string>
    <string name="addCity">Add</string>
    <string name="units">Units:</string>
    <string name="refreshBtn">Refresh weather data</string>
    <string name="deleteCity">Delete</string>


    <!-- common strings -->
    <string name="phoneTime">Phone Time:</string>
    <string name="longitude">Longitude:</string>
    <string name="latitude">Latitude:</string>

    <!-- Forecast strings -->
    <string name="dayOne">First day:</string>
    <string name="dayTwo">Second day:</string>
    <string name="dayThree">Third day:</string>
    <string name="dayFour">Fourth day:</string>
    <string name="dayFive">Fifth day:</string>


    <!-- Weather strings -->
    <string name="city">City:</string>
    <string name="coordinates">Coordinates:</string>
    <string name="pressure">Atmospheric pressure:</string>
    <string name="weather">Weather:</string>
    <string name="wind">Wind:</string>
    <string name="windStrength">Strength:</string>
    <string name="windDirection">Direction:</string>
    <string name="humidity">Humidity:</string>
    <string name="visibility">Visibility:</string>
    <string name="temp">Temperature:</string>


</resources>