<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".Settings">

    <!-- TODO: Update blank fragment layout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/refreshButton"
            android:layout_width="142dp"
            android:layout_height="48dp"
            android:layout_marginStart="160dp"
            android:layout_marginTop="424dp"
            android:onClick="save"
            android:text="@string/refreshBtn"
            android:textSize="10sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/citiesInputLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="240dp"
            android:text="@string/citiesInput"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/latitudeSettingsLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="112dp"
            android:text="@string/latitude"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/longitudeSettingLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="28dp"
            android:text="@string/longitude"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/longitudeInput"
            android:layout_width="77dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="56dp"
            android:inputType="text"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="SpeakableTextPresentCheck" />

        <EditText
            android:id="@+id/latitudeInput"
            android:layout_width="75dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="132dp"
            android:inputType="text"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="SpeakableTextPresentCheck" />

        <Button
            android:id="@+id/saveButton"
            android:layout_width="64dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="180dp"
            android:onClick="save"
            android:text="@string/saveChanges"
            android:textSize="10sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/saveButton2"
            android:layout_width="64dp"
            android:layout_height="48dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="424dp"
            android:onClick="save"
            android:text="@string/saveChanges"
            android:textSize="10sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/refreshSpinner"
            style="@android:style/Widget.DeviceDefault.Light.Spinner"
            android:layout_width="92dp"
            android:layout_height="48dp"
            android:layout_marginStart="124dp"
            android:layout_marginTop="56dp"
            android:background="@color/teal_200"
            android:spinnerMode="dropdown"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/refreshLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="124dp"
            android:layout_marginTop="28dp"
            android:text="@string/refresh"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/citiesSpinner"
            style="@android:style/Widget.DeviceDefault.Light.Spinner"
            android:layout_width="122dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="364dp"
            android:background="@color/teal_200"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="SpeakableTextPresentCheck" />

        <Spinner
            android:id="@+id/unitsSpinner"
            style="@android:style/Widget.DeviceDefault.Light.Spinner"
            android:layout_width="122dp"
            android:layout_height="48dp"
            android:layout_marginStart="160dp"
            android:layout_marginTop="364dp"
            android:background="@color/teal_200"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/citiesLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="332dp"
            android:text="@string/cities"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/unitsLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="160dp"
            android:layout_marginTop="332dp"
            android:text="@string/units"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/cityInput"
            android:layout_width="109dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="272dp"
            android:inputType="text"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="SpeakableTextPresentCheck" />

        <Button
            android:id="@+id/delCityButton"
            android:layout_width="73dp"
            android:layout_height="50dp"
            android:layout_marginStart="240dp"
            android:layout_marginTop="272dp"
            android:text="@string/deleteCity"
            android:textSize="8sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/addCityButton"
            android:layout_width="60dp"
            android:layout_height="48dp"
            android:layout_marginStart="152dp"
            android:layout_marginTop="272dp"
            android:text="@string/addCity"
            android:textSize="10sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>